Fixed no data spacing

--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -98,7 +98,7 @@
     padding: 20px;
   }
   &__no-data {
-    padding: 20px 0;
+    padding: 20px;
   }
 
   &-header {
